--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </style>\
 </head>\
 <body>\
-  <img src="logo.png" alt="ill-Co-P3 Logo" class="logo" />\
+  <img src="artboard1" alt="ill-Co-P3 Logo" class="logo" />\
   <h1>Coming Soon</h1>\
   <h2>ill-Co-P3 - PATHFINDER</h2>\
   <a href="https://ill-cp-p3-learns-taggit.streamlit.app/" class="btn" target="_blank">Contribute to the Program</a>\
