--- a/index.html
+++ b/index.html
@@ -1,69 +1,61 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2709
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural\partightenfactor0
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ill-Co-P3 - Coming Soon</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #0e0e0e;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      height: 100vh;
+      text-align: center;
+    }
 
-\f0\fs24 \cf0 <!DOCTYPE html>\
-<html lang="en">\
-<head>\
-  <meta charset="UTF-8" />\
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>\
-  <title>ill-Co-P3 - Coming Soon - ill-Co-P3: PATHFINDER</title>\
-  <style>\
-    body \{\
-      margin: 0;\
-      padding: 0;\
-      background-color: #0e0e0e;\
-      color: #fff;\
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;\
-      display: flex;\
-      justify-content: center;\
-      align-items: center;\
-      flex-direction: column;\
-      height: 100vh;\
-      text-align: center;\
-    \}\
-\
-    .logo \{\
-      max-width: 200px;\
-      margin-bottom: 30px;\
-    \}\
-\
-    h1 \{\
-      font-size: 2rem;\
-      margin: 0;\
-    \}\
-\
-    h2 \{\
-      font-size: 1.2rem;\
-      font-weight: 300;\
-      color: #bbb;\
-      margin: 10px 0 40px;\
-    \}\
-\
-    .btn \{\
-      background-color: #ff3366;\
-      border: none;\
-      padding: 12px 24px;\
-      font-size: 1rem;\
-      color: white;\
-      text-decoration: none;\
-      border-radius: 6px;\
-      transition: background-color 0.3s ease;\
-    \}\
-\
-    .btn:hover \{\
-      background-color: #ff0033;\
-    \}\
-  </style>\
-</head>\
-<body>\
-  <img src="artboard1" alt="ill-Co-P3 Logo" class="logo" />\
-  <h1>Coming Soon</h1>\
-  <h2>ill-Co-P3 - PATHFINDER</h2>\
-  <a href="https://ill-cp-p3-learns-taggit.streamlit.app/" class="btn" target="_blank">Contribute to the Program</a>\
-</body>\
-</html>\
-}
+    .logo {
+      max-width: 200px;
+      margin-bottom: 30px;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin: 0;
+    }
+
+    h2 {
+      font-size: 1.2rem;
+      font-weight: 300;
+      color: #bbb;
+      margin: 10px 0 40px;
+    }
+
+    .btn {
+      background-color: #ff3366;
+      border: none;
+      padding: 12px 24px;
+      font-size: 1rem;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      transition: background-color 0.3s ease;
+    }
+
+    .btn:hover {
+      background-color: #ff0033;
+    }
+  </style>
+</head>
+<body>
+  <img src="Artboard1" alt="ill-Co-P3 Logo" class="logo" />
+  <h1>Coming Soon</h1>
+  <h2>ill-Co-P3 - PATHFINDER</h2>
+  <a href="https://ill-cp-p3-learns-taggit.streamlit.app/" class="btn" target="_blank">Contribute to the Program</a>
+</body>
+</html>
