--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <img src="Artboard1" alt="ill-Co-P3 Logo" class="logo" />
+  <img src="Artboard1.png" alt="ill-Co-P3 Logo" class="logo" />
   <h1>Coming Soon</h1>
   <h2>ill-Co-P3 - PATHFINDER</h2>
   <a href="https://ill-cp-p3-learns-taggit.streamlit.app/" class="btn" target="_blank">Contribute to the Program</a>
