--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ill-Co-P3 - Coming Soon</title>
+  <title>ill-Co-P3 PATHFINDER - Coming Soon</title>
   <style>
     body {
       margin: 0;
@@ -20,17 +20,17 @@
     }
 
     .logo {
-      max-width: 200px;
+      max-width: 500px;
       margin-bottom: 30px;
     }
 
     h1 {
-      font-size: 2rem;
+      font-size: 5rem;
       margin: 0;
     }
 
     h2 {
-      font-size: 1.2rem;
+      font-size: 3rem;
       font-weight: 300;
       color: #bbb;
       margin: 10px 0 40px;
@@ -40,7 +40,7 @@
       background-color: #ff3366;
       border: none;
       padding: 12px 24px;
-      font-size: 1rem;
+      font-size: 3rem;
       color: white;
       text-decoration: none;
       border-radius: 6px;
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <img src="Artboard1.png" alt="ill-Co-P3 Logo" class="logo" />
+  <img src="*/Artboard1.png" alt="ill-Co-P3 Logo" class="logo" />
   <h1>Coming Soon</h1>
   <h2>ill-Co-P3 - PATHFINDER</h2>
   <a href="https://ill-cp-p3-learns-taggit.streamlit.app/" class="btn" target="_blank">Contribute to the Program</a>
