--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      height: 100vh;
+      height: 200vh;
       text-align: center;
     }
 
@@ -25,12 +25,12 @@
     }
 
     h1 {
-      font-size: 5rem;
+      font-size: 8rem;
       margin: 0;
     }
 
     h2 {
-      font-size: 3rem;
+      font-size: 5rem;
       font-weight: 300;
       color: #bbb;
       margin: 10px 0 40px;
@@ -40,7 +40,7 @@
       background-color: #ff3366;
       border: none;
       padding: 12px 24px;
-      font-size: 3rem;
+      font-size: 5rem;
       color: white;
       text-decoration: none;
       border-radius: 6px;
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <img src="*/Artboard1.png" alt="ill-Co-P3 Logo" class="logo" />
+  <img src="Artboard1.png" alt="ill-Co-P3 Logo" class="logo" />
   <h1>Coming Soon</h1>
   <h2>ill-Co-P3 - PATHFINDER</h2>
   <a href="https://ill-cp-p3-learns-taggit.streamlit.app/" class="btn" target="_blank">Contribute to the Program</a>
