--- a/index.html
+++ b/index.html
@@ -3,59 +3,118 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ill-Co-P3 PATHFINDER - Coming Soon</title>
+  <title>ill-Co-P3 Project</title>
   <style>
     body {
+      background-color: #0f0f0f;
+      color: #e0e0e0;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #0e0e0e;
-      color: #fff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      height: 200vh;
+    }
+
+    header, footer {
       text-align: center;
+      padding: 2rem 1rem;
+      background-color: #1c1c1c;
     }
 
-    .logo {
-      max-width: 900px;
-      margin-bottom: 30px;
+    .hero {
+      padding: 4rem 2rem;
+      text-align: center;
+      background-color: #121212;
     }
 
-    h1 {
-      font-size: 15rem;
-      margin: 0;
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5rem;
     }
 
-    h2 {
-      font-size: 8rem;
-      font-weight: 300;
-      color: #bbb;
-      margin: 10px 0 40px;
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 800px;
+      margin: auto;
+      color: #ccc;
     }
 
     .btn {
-      background-color: #ff3366;
-      border: none;
-      padding: 12px 24px;
-      font-size: 8rem;
-      color: white;
-      text-decoration: none;
+      display: inline-block;
+      margin-top: 2rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #4db8ff;
+      color: #000;
       border-radius: 6px;
-      transition: background-color 0.3s ease;
+      font-weight: bold;
+      text-decoration: none;
     }
 
-    .btn:hover {
-      background-color: #ff0033;
+    section {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #ffcc00;
+    }
+
+    .footer-links a {
+      color: #4db8ff;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+
+    .logo {
+      max-width: 120px;
+      margin-bottom: 1rem;
+      animation: glow 2s infinite alternate;
+      filter: drop-shadow(0 0 8px #4db8ff) brightness(1.2);
+    }
+
+    @keyframes glow {
+      from {
+        filter: drop-shadow(0 0 8px #4db8ff) brightness(1.2);
+      }
+      to {
+        filter: drop-shadow(0 0 20px #4db8ff) brightness(1.6);
+      }
     }
   </style>
 </head>
 <body>
-  <img src="Artboard1.png" alt="ill-Co-P3 Logo" class="logo" />
-  <h1>Coming Soon</h1>
-  <h2>ill-Co-P3 - PATHFINDER</h2>
-  <a href="https://ill-cp-p3-learns-taggit.streamlit.app/" class="btn" target="_blank">Contribute to the Program</a>
+
+  <header>
+    <img src="logo1.png" alt="ill-Co-P3 Logo" class="logo" />
+    <h1>Welcome to the ill-Co=P3 Project</h1>
+    <p>Pathfinder for graphic design training, tagging, and creative chaos.</p>
+  </header>
+
+  <div class="hero">
+    <h1>This is Not a Company</h1>
+    <p>It’s just a dude who likes to learn and build cool stuff. The ill-Co-P3 Project is a crowdsourced, AI-powered tool that helps analyze graphic design using principles and elements of art. We’re building a rich dataset by tagging images — and yes, you can help (and yes, it’s free).</p>
+    <a href="https://ill-cp-p3-learns-taggit.streamlit.app/" class="btn">🚀 Launch the App</a>
+  </div>
+
+  <section>
+    <h2>How It Works</h2>
+    <p>Log in. View an image. Tag it with key design principles and elements. GPT-4 helps out in the background. Your tags help train the Pathfinder Graphic Design Assistant. And if you tag 50+ images? You unlock lifetime access to the AI assistant. Pretty neat, right?</p>
+  </section>
+
+  <section>
+    <h2>Why?</h2>
+    <p>This project helps middle-aged creative folks escape mediocrity, build new brain pathways, and support a design intelligence tool built by the crowd. Also: women are welcome. None signed up to help yet — but maybe you'll be the first?</p>
+  </section>
+
+  <footer>
+    <p>Contact: <a href="mailto:illco.p.learning@gmail.com">illco.p.learning@gmail.com</a></p>
+    <div class="footer-links">
+      <a href="https://ill-cp-p3-learns-taggit.streamlit.app/" target="_blank">App</a>
+      <a href="https://open.spotify.com/playlist/4NgWuA0aWDaKxbKMwWnl8r?si=rKrOh28EQPS2t8dfa5xYAg" target="_blank">Spotify</a>
+      <a href="https://twitter.com/ill_co_p3" target="_blank">Twitter</a>
+      <a href="#" target="_blank">GitHub (link coming soon)</a>
+    </div>
+    <p style="margin-top: 1rem;">&copy; 2025 ill-Co-P3: Pathfinder & BeerSpitNight</p>
+  </footer>
+
 </body>
 </html>
