--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The ill-Co=P3 Project</title>
+  <title>###The ill-Co=P3 Project###</title>
   <style>
     body {
       margin: 0;
@@ -49,7 +49,7 @@
     }
 
     .logo {
-      max-width: 80px;
+      max-width: 175px;
       margin-bottom: 1.5rem;
       animation: glow 2s infinite alternate;
       filter: drop-shadow(0 0 8px #4db8ff) brightness(1.2);
@@ -103,18 +103,18 @@
     <p>Reach out: <a href="mailto:illco.p.learning@gmail.com">illco.p.learning@gmail.com</a></p>
 
     <h2>MUSIC?</h2>
-    <p>BeerSpitNight loves music.</p>
+    <p>Beerspit's killer playlist.</p>
     <a href="https://open.spotify.com/playlist/4NgWuA0aWDaKxbKMwWnl8r?si=rKrOh28EQPS2t8dfa5xYAg" target="_blank">Spotify Playlist</a>
   </aside>
 
   <main>
     <section>
-      <h1>The ill-Co=P3 Project</h1>
+      <h1>###The ill-Co=P3 Project###</h1>
       <p>The ill-Co=P3 Project is building a crowdsourced, AI-enhanced tool for tagging and analyzing graphic design images using core design principles and elements. By combining human insight and GPT-4 Vision, we're creating a high-quality training dataset to power the Pathfinder Graphic Design Assistant.</p>
     </section>
 
     <section>
-      <h2>Tagging Module — That’s What It Is</h2>
+      <h2>You want me to do what? </h2>
       <p>The tagging module is a clean, login-gated interface where users review image-caption pairs and label them with relevant design principles, elements, quality ratings, and issues — all synced to Firebase in real time.</p>
       <a href="https://ill-cp-p3-learns-taggit.streamlit.app/" class="btn">🚀 Launch Tagging App</a>
     </section>
@@ -126,7 +126,7 @@
     </section>
 
     <section>
-      <h2>Why Are You Here?</h2>
+      <h2>Why Am I Here?  What is going on?</h2>
       <p>Built to help middle-aged guys escape mediocrity, fire up new brain pathways — and yes, the page might crash. Women welcome (none signed up to spend hours building it with me). Come tag some designs. – Beerspitnight</p>
     </section>
 
