--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>###The ill-Co=P3 Project###</title>
+  <title>The ill-Co=P3 Project###</title>
   <style>
     body {
       margin: 0;
