--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+4<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -149,15 +149,18 @@
       <p>The tagging module is a clean, login-gated interface where users review image-caption pairs and label them with relevant design principles, elements, quality ratings, and issues — all synced to Firebase in real time..</p>
       <a class="btn" href="https://ill-cp-p3-learns-taggit.streamlit.app/">🚀 Launch App</a>
     </section>
-
     <section>
-      <h2>Get Perks for Tagging</h2>
-      <p>Tag 50+ images, unlock forever Pathfinder AI. Not even kidding. And you help build the future of design education while looking cool in dark mode. If you will never need a design assistant, I can probably get some killer t-shirts made - I know a guy.</p>
-    </section>
+      <h2>You Want Me to Do This for Free?/h2>
+        <p>Yup. It’s free. I should probably pay you. Tagging helps build an open, collaborative design intelligence model that benefits students, educators, and creators worldwide.</p>
+      <section>
+        <h2>Do I get any shawg from the company for doing all this work for free?</h2>
+        <p>I'm sorry, I didn't hear your question.  Next?.... em.
+      </section>
 
     <div class="footer">
       <p>© 2025 ill-Co-P3: Pathfinder / Beerspitnight</p>
       <p>Follow: <a href="https://twitter.com/ill_co_p3">@ill_co_p3</a></p>
+      <h2>If you somewhat accurately tag 50+ images and you’ll unlock a lifetime subscription to Pathfinder Assistant — your AI co-pilot for design analysis, critique, and learning.  If you aren't into ai assistants - ai asses, haha - I know a shirt guy and we can probably maybe, like....46% maybe get t-shirts made.  Just need to find someone to design th</h2>
     </div>
   </main>
 
