--- a/index.html
+++ b/index.html
@@ -151,16 +151,18 @@
     </section>
     <section>
       <h2>You Want Me to Do This for Free?/h2>
-        <p>Yup. It’s free. I should probably pay you. Tagging helps build an open, collaborative design intelligence model that benefits students, educators, and creators worldwide.</p>
+      <p>Yup. It’s free. I should probably pay you. Tagging helps build an open, collaborative design intelligence model that benefits students, educators, and creators worldwide.</p>
+    </section>
       <section>
         <h2>Do I get any shawg from the company for doing all this work for free?</h2>
         <p>I'm sorry, I didn't hear your question.  Next?.... em.
       </section>
-
+    <section>
     <div class="footer">
       <p>© 2025 ill-Co-P3: Pathfinder / Beerspitnight</p>
       <p>Follow: <a href="https://twitter.com/ill_co_p3">@ill_co_p3</a></p>
-      <h2>If you somewhat accurately tag 50+ images and you’ll unlock a lifetime subscription to Pathfinder Assistant — your AI co-pilot for design analysis, critique, and learning.  If you aren't into ai assistants - ai asses, haha - I know a shirt guy and we can probably maybe, like....46% maybe get t-shirts made.  Just need to find someone to design th</h2>
+      <p>If you somewhat accurately tag 50+ images and you’ll unlock a lifetime subscription to Pathfinder Assistant — your AI co-pilot for design analysis, critique, and learning.  If you aren't into ai assistants - ai asses, haha - I know a shirt guy and we can probably maybe, like....46% maybe get t-shirts made.  Just need to find someone to design th</p>
+    </section>
     </div>
   </main>
 
