--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 
     <section>
       <h2>Why Am I Here? What is going on?</h2>
-      <p>Built to help middle-aged guys escape mediocrity, fire up new brain pathways — and yes, the page might crash. Women welcome (none signed up to spend hours building it with me). Come tag some designs. – Beerspitnight.</p>
+      <p>Built to help middle-aged guys escape mediocrity, ill-Co-P3 helps to fire up new brain pathways to keep us midlife crisis peps engaged...who wants a Corevette?</p>
     </section>
 
     <section>
       <h2>You want me to do what?</h2>
-      <p>The tagging module is a clean, login-gated interface where users review image-caption pairs and label them with relevant design principles, elements, quality ratings, and issues — all synced to Firebase in real time..</p>
+      <p>I want you to look at images, and then click a dropdown menu or two, maybe select a radio button, maybe not.  That is all I am asking you to do.</p>
       <a class="btn" href="https://ill-cp-p3-learns-taggit.streamlit.app/">🚀 Launch App</a>
     </section>
     <section>
