--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-4<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -101,14 +101,25 @@
     }
 
     .footer {
-      font-size: 0.75rem;
-      color: #666;
+      font-size: 0.85rem;
+      color: #888;
       margin-top: 4rem;
     }
 
     .footer a {
       color: var(--highlight);
       text-decoration: none;
+    }
+
+    .social-icons img {
+      height: 24px;
+      margin-right: 10px;
+      vertical-align: middle;
+      transition: opacity 0.2s ease;
+    }
+
+    .social-icons img:hover {
+      opacity: 0.8;
     }
 
     @keyframes glow {
@@ -122,7 +133,7 @@
   <aside>
     <img src="logo1.png" alt="ill-Co-P3 Logo" class="logo" />
     <h2>ill-Co=P3: Pathfinder - Learns?</h2>
-    <p>This is’t a company. Just a guy firing neurons and tagging designs.</p>
+    <p>This isn’t a company. Just a guy firing neurons and tagging designs.</p>
 
     <h2>Links</h2>
     <a href="https://ill-cp-p3-learns-taggit.streamlit.app/">Log In</a>
@@ -141,29 +152,51 @@
 
     <section>
       <h2>Why Am I Here? What is going on?</h2>
-      <p>Built to help middle-aged guys escape mediocrity, ill-Co-P3 helps to fire up new brain pathways to keep us midlife crisis peps engaged...who wants a Corevette?</p>
+      <p>Built to help middle-aged guys escape mediocrity, ill-Co-P3 helps fire up new brain pathways to keep us midlife-crisis peeps engaged. Who wants a Corvette?</p>
     </section>
 
     <section>
       <h2>You want me to do what?</h2>
-      <p>I want you to look at images, and then click a dropdown menu or two, maybe select a radio button, maybe not.  That is all I am asking you to do.</p>
+      <p>Look at images. Click a dropdown or two. Maybe hit a radio button. That’s it. That’s the job.</p>
       <a class="btn" href="https://ill-cp-p3-learns-taggit.streamlit.app/">🚀 Launch App</a>
     </section>
+
     <section>
-      <h2>You Want Me to Do This for Free?/h2>
-      <p>Yup. It’s free. I should probably pay you. Tagging helps build an open, collaborative design intelligence model that benefits students, educators, and creators worldwide.</p>
+      <h2>You Want Me to Do This for Free?</h2>
+      <p style="color: #ffcc00; font-weight: bold; font-size: 1.05rem;">
+        Yup. It’s free. I should probably pay you. Tagging helps build an open, collaborative design intelligence model that benefits students, educators, and creators worldwide.
+      </p>
     </section>
-      <section>
-        <h2>Do I get any shawg from the company for doing all this work for free?</h2>
-        <p>I'm sorry, I didn't hear your question.  Next?.... em.
-      </section>
+
     <section>
-    <div class="footer">
+      <h2>Do I get any shawg from the company for doing all this work for free?</h2>
+      <p>
+        I'm sorry, I didn't hear your question. Next?.... em.
+      </p>
+    </section>
+
+    <section class="footer">
       <p>© 2025 ill-Co-P3: Pathfinder / Beerspitnight</p>
-      <p>Follow: <a href="https://twitter.com/ill_co_p3">@ill_co_p3</a></p>
-      <p>If you somewhat accurately tag 50+ images and you’ll unlock a lifetime subscription to Pathfinder Assistant — your AI co-pilot for design analysis, critique, and learning.  If you aren't into ai assistants - ai asses, haha - I know a shirt guy and we can probably maybe, like....46% maybe get t-shirts made.  Just need to find someone to design th</p>
+
+      <div class="social-icons" style="margin: 2rem 0;">
+        <a href="mailto:illco.p.learning@gmail.com" title="Email">
+          <img src="email.png" alt="Email Icon">
+        </a>
+        <a href="https://twitter.com/ill_co_p3" target="_blank" title="Twitter">
+          <img src="twitter.png" alt="Twitter Icon">
+        </a>
+        <a href="https://open.spotify.com/playlist/4NgWuA0aWDaKxbKMwWnl8r?si=rKrOh28EQPS2t8dfa5xYAg" target="_blank" title="Spotify">
+          <img src="spotify.png" alt="Spotify Icon">
+        </a>
+        <a href="https://github.com/Beerspitnight" target="_blank" title="GitHub">
+          <img src="github.png" alt="GitHub Icon">
+        </a>
+      </div>
+
+      <p style="font-size: 0.9rem; color: #999;">
+        If you tag 50+ images with even a shred of accuracy, you’ll unlock a lifetime subscription to Pathfinder Assistant — your AI co-pilot for design critique and learning. Not into AI? I know a shirt guy. We can maybe, like... 46% maybe, get t-shirts made. Just need someone to design them.
+      </p>
     </section>
-    </div>
   </main>
 
 </body>
