--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       color: var(--light-gray);
       font-family: 'Segoe UI', sans-serif;
       display: flex;
+      flex-direction: row;
       min-height: 100vh;
     }
 
@@ -111,14 +112,16 @@
       text-decoration: none;
     }
 
-    .social-icons img {
-      height: 24px;
-      margin-right: 10px;
+    .social-icons svg {
+      width: 26px;
+      height: 26px;
+      margin-right: 12px;
       vertical-align: middle;
+      fill: var(--highlight);
       transition: opacity 0.2s ease;
     }
 
-    .social-icons img:hover {
+    .social-icons a:hover svg {
       opacity: 0.8;
     }
 
@@ -126,22 +129,54 @@
       from { filter: drop-shadow(0 0 8px var(--highlight)); }
       to { filter: drop-shadow(0 0 16px var(--highlight)); }
     }
+
+    /* Mobile */
+    @media (max-width: 768px) {
+      body {
+        flex-direction: column;
+      }
+
+      aside {
+        width: 100%;
+        border-right: none;
+        border-bottom: 1px solid var(--medium-gray);
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 1rem;
+      }
+
+      .logo {
+        max-width: 100px;
+        margin: 0 1rem 1rem;
+      }
+
+      main {
+        padding: 1.5rem;
+      }
+
+      section {
+        margin-bottom: 2rem;
+      }
+    }
   </style>
 </head>
 <body>
 
   <aside>
     <img src="logo1.png" alt="ill-Co-P3 Logo" class="logo" />
-    <h2>ill-Co=P3: Pathfinder - Learns?</h2>
-    <p>This isn’t a company. Just a guy firing neurons and tagging designs.</p>
+    <div>
+      <h2>ill-Co=P3: Pathfinder - Learns?</h2>
+      <p>This isn’t a company. Just a guy firing neurons and tagging designs.</p>
 
-    <h2>Links</h2>
-    <a href="https://ill-cp-p3-learns-taggit.streamlit.app/">Log In</a>
-    <a href="https://ill-cp-p3-learns-taggit.streamlit.app/">Create Account</a>
-    <a href="mailto:illco.p.learning@gmail.com">Email</a>
-    <a href="https://open.spotify.com/playlist/4NgWuA0aWDaKxbKMwWnl8r?si=rKrOh28EQPS2t8dfa5xYAg" target="_blank">Playlist</a>
-    <a href="https://www.freeprivacypolicy.com/live/50c9c708-de6b-4440-be9e-1aeb972e2321" target="_blank">Privacy</a>
-    <a href="https://www.freeprivacypolicy.com/live/fc8b023b-a292-4e28-a044-56a29102b9f4" target="_blank">Terms</a>
+      <h2>Links</h2>
+      <a href="https://ill-cp-p3-learns-taggit.streamlit.app/">Log In</a>
+      <a href="https://ill-cp-p3-learns-taggit.streamlit.app/">Create Account</a>
+      <a href="mailto:illco.p.learning@gmail.com">Email</a>
+      <a href="https://open.spotify.com/playlist/4NgWuA0aWDaKxbKMwWnl8r?si=rKrOh28EQPS2t8dfa5xYAg" target="_blank">Playlist</a>
+      <a href="https://www.freeprivacypolicy.com/live/50c9c708-de6b-4440-be9e-1aeb972e2321" target="_blank">Privacy</a>
+      <a href="https://www.freeprivacypolicy.com/live/fc8b023b-a292-4e28-a044-56a29102b9f4" target="_blank">Terms</a>
+    </div>
   </aside>
 
   <main>
@@ -178,18 +213,22 @@
     <section class="footer">
       <p>© 2025 ill-Co-P3: Pathfinder / Beerspitnight</p>
 
-      <div class="social-icons" style="margin: 2rem 0;">
+      <div class="social-icons" style="margin: 1rem 0;">
         <a href="mailto:illco.p.learning@gmail.com" title="Email">
-          <img src="email.png" alt="Email Icon">
+          <!-- email.svg -->
+          <svg viewBox="0 0 24 24"><path d="M12 13.065 0 6V4l12 7.065L24 4v2z"/><path d="M0 8v12h24V8L12 15z"/></svg>
         </a>
         <a href="https://twitter.com/ill_co_p3" target="_blank" title="Twitter">
-          <img src="twitter.png" alt="Twitter Icon">
+          <!-- twitter.svg -->
+          <svg viewBox="0 0 24 24"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53A4.48 4.48 0 0 0 22.43 1a9 9 0 0 1-2.85 1.1A4.48 4.48 0 0 0 16.5 0c-2.5 0-4.5 2.24-4.5 5 0 .39.04.77.13 1.13C8.09 5.98 4.29 4 1.67.57a5.16 5.16 0 0 0-.61 2.52c0 1.74.84 3.28 2.11 4.19a4.47 4.47 0 0 1-2-.56v.06c0 2.43 1.6 4.45 3.73 4.91A4.48 4.48 0 0 1 1 12.3c1.18.79 2.57 1.23 4.07 1.23A9 9 0 0 1 0 15a12.7 12.7 0 0 0 6.29 1.84c7.55 0 11.68-6.62 11.68-12.36 0-.19 0-.38-.01-.57A8.18 8.18 0 0 0 23 3z"/></svg>
         </a>
         <a href="https://open.spotify.com/playlist/4NgWuA0aWDaKxbKMwWnl8r?si=rKrOh28EQPS2t8dfa5xYAg" target="_blank" title="Spotify">
-          <img src="spotify.png" alt="Spotify Icon">
+          <!-- spotify.svg -->
+          <svg viewBox="0 0 24 24"><path d="M12 0a12 12 0 1 0 12 12A12.013 12.013 0 0 0 12 0zm5.256 17.299a.748.748 0 0 1-1.034.266 10.336 10.336 0 0 0-9.444-.41.749.749 0 0 1-.636-1.36 11.835 11.835 0 0 1 10.838.465.75.75 0 0 1 .276 1.039zm1.488-3.151a.935.935 0 0 1-1.29.331 12.437 12.437 0 0 0-11.37-.483.936.936 0 1 1-.768-1.706 14.31 14.31 0 0 1 13.084.558.935.935 0 0 1 .344 1.3zm.144-3.336A1.122 1.122 0 0 1 17.7 10.4a14.963 14.963 0 0 0-13.63-.589 1.122 1.122 0 1 1-.917-2.05 17.21 17.21 0 0 1 15.684.676 1.122 1.122 0 0 1 .392 1.475z"/></svg>
         </a>
         <a href="https://github.com/Beerspitnight" target="_blank" title="GitHub">
-          <img src="github.png" alt="GitHub Icon">
+          <!-- GitHub using inline path -->
+          <svg viewBox="0 0 24 24"><path d="M12 .5C5.5.5.5 5.5.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.8-1.6-3.8-1.6-.5-1.1-1.2-1.4-1.2-1.4-1-.6.1-.6.1-.6 1.1.1 1.6 1.2 1.6 1.2 1 .1.6 2.1.6 2.1.8 1.4 2.4 1 3 .8.1-.7.3-1.1.6-1.3-2.6-.3-5.3-1.3-5.3-5.8 0-1.3.5-2.3 1.2-3.2-.1-.3-.5-1.5.1-3.1 0 0 1-.3 3.2 1.2a10.8 10.8 0 0 1 5.9 0c2.1-1.5 3.2-1.2 3.2-1.2.6 1.6.2 2.8.1 3.1.8.9 1.2 2 1.2 3.2 0 4.5-2.7 5.5-5.3 5.8.4.3.7.9.7 1.9v2.8c0 .3.2.7.8.6a11.5 11.5 0 0 0 7.9-10.9C23.5 5.5 18.5.5 12 .5z"/></svg>
         </a>
       </div>
 
